--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8080
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/touchgrass?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=touchgrass
+spring.datasource.password=${MYSQL_PASSWORD:touchgrass}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
