--- a/server/src/main/resources/application.properties.template
+++ b/server/src/main/resources/application.properties.template
@@ -4,17 +4,22 @@ server.port=${SERVER_PORT:8080}
 # Database Configuration
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:touchgrass}?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${MYSQL_USER:touchgrass}
-spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.datasource.password=${MYSQL_PASSWORD:touchgrass}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Logging Configuration
 logging.level.root=INFO
 logging.level.com.touchgrass=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
+
+# Server Configuration
+server.compression.enabled=true
+server.http2.enabled=true
+
+# Add any other Spring Boot configuration here 
