added JWT files and code, error while registering and login

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,8 +13,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# JWT Configuration
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION:86400000}
+
 # Logging Configuration
 logging.level.root=INFO
 logging.level.com.touchgrass=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
+logging.level.org.springframework.security=DEBUG
