--- a/server/src/main/resources/application.properties.template
+++ b/server/src/main/resources/application.properties.template
@@ -12,6 +12,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# JWT Configuration
+jwt.secret=${JWT_SECRET:REPLACE_WITH_A_SECURE_RANDOM_KEY}
+jwt.expiration=${JWT_EXPIRATION:86400000}
+
 # Logging Configuration
 logging.level.root=INFO
 logging.level.com.touchgrass=DEBUG
