refactor, using 64 byte key

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -47,3 +47,9 @@ logs/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Application Properties ###
+src/main/resources/application.properties
