--- a/server/src/main/resources/application.properties.template
+++ b/server/src/main/resources/application.properties.template
@@ -4,16 +4,17 @@ server.port=${SERVER_PORT:8080}
 # Database Configuration
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:touchgrass}?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${MYSQL_USER:touchgrass}
-spring.datasource.password=${MYSQL_PASSWORD:touchgrass}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # JWT Configuration
-jwt.secret=${JWT_SECRET:REPLACE_WITH_A_SECURE_RANDOM_KEY}
+jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION:86400000}
 
 # Logging Configuration
@@ -21,6 +22,7 @@ logging.level.root=INFO
 logging.level.com.touchgrass=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
+logging.level.org.springframework.security=DEBUG
 
 # Server Configuration
 server.compression.enabled=true
