--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -9,5 +9,7 @@ services:
       - MYSQL_HOST=localhost # Optional, default: localhost
       - MYSQL_PORT=3306 # Optional, default: 3306
       - SERVER_PORT=8080 # Optional, default: 8080
+      - JWT_SECRET=$JWT_SECRET
+      - JWT_EXPIRATION=86400000 # Optional, default: 86400000 (1 day)
     ports:
       - 8080:8080
