--- a/server/.env.template
+++ b/server/.env.template
@@ -9,6 +9,4 @@ MYSQL_PORT=3306
 SERVER_PORT=8080
 
 # Add any other configuration variables your server needs here
-# Example:
-# JWT_SECRET=your_jwt_secret
-# REDIS_URL=redis://localhost:6379 
+JWT_SECRET=your_jwt_secret
