using env for api url, remove unused ndk version

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -94,7 +94,7 @@ flutter:
   # see https://flutter.dev/to/font-from-package
 
   assets:
-#    - .env
+    - .env
     - assets/icons/
 
 flutter_launcher_icons:
